--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </footer>
 
     <a id="to-top" href="#" class="nav-item">back to top</a>
+    <script type="module" ref="js/main.js"></script>
 </body>
 
 </html>
